[package]
name = "dx-rs"
version = "0.1.0"
authors = ["immortal infidel <immortal.infidel@gmail.com>"]
edition = "2018"
license="MIT"
description=" Directional Movement Index (DX) ,Average Directional Movement Index (ADX)  and Average Directional Movement Rating (ADXR) implementaion In Rust"
repository="https://github.com/immortalinfidel/dx-rs"
homepage="https://github.com/immortalinfidel/dx-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta-common = { git = "https://github.com/LinuxHeki/ta-common", rev = "2708466ebe396be60d7f60bc4592cfbe7e6acd6f" }
tr-rs = { git = "https://github.com/Arm1stice/tr-rs", rev = "32df1c547cd86fd650c6efe744692324351b82cd" }
